# tree-sitter-gdml

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gdml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  gdml.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gdml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGDML/: gdml.h
bindings/swift/TreeSitterGDMLTests/: TreeSitterGDMLTests.swift
gdml/: grammar.js  package.json  rules.mjs  schema.mjs  simple.gdml
gdml/src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.h
